<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".mainModule.views.MainActivity">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationTitle"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/txtNavTitle"
        android:layout_width="264.15dp"
        android:layout_height="24dp"
        android:textAlignment="center"
        android:textSize="18dp"
        android:text="@string/profileEdit"
        android:fontFamily="@font/roboto_medium"
        android:textColor="@color/white"
        android:background="@color/black"
        app:layout_constraintTop_toTopOf="@id/navigationTitle"
        app:layout_constraintStart_toStartOf="@id/navigationTitle"
        app:layout_constraintEnd_toEndOf="@id/navigationTitle"
        app:layout_constraintBottom_toBottomOf="@id/navigationTitle"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_arrow_back"
        android:layout_marginStart="19.1dp"
        android:contentDescription="@string/imageArrowBack"
        app:layout_constraintTop_toTopOf="@id/navigationTitle"
        app:layout_constraintStart_toStartOf="@id/navigationTitle"
        app:layout_constraintEnd_toStartOf="@id/txtNavTitle"
        app:layout_constraintBottom_toBottomOf="@id/navigationTitle"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_close"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/imageClose"
        app:layout_constraintTop_toTopOf="@id/navigationTitle"
        app:layout_constraintStart_toEndOf="@id/txtNavTitle"
        app:layout_constraintEnd_toEndOf="@id/navigationTitle"
        app:layout_constraintBottom_toBottomOf="@id/navigationTitle"/>


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imgProfile"
        android:layout_width="152dp"
        android:layout_height="152dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="111dp"
        android:background="@drawable/image_rounded"
        android:src="@drawable/image_person"
        android:translationZ="20dp"
        app:civ_border_color="@color/white"
        app:layout_constraintEnd_toEndOf="@id/navigationTitle"
        app:layout_constraintStart_toStartOf="@id/navigationTitle"
        app:layout_constraintTop_toBottomOf="@id/navigationTitle"/>

    <ImageView
        android:id="@+id/imgOpenGallery"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/icon_image"
        android:contentDescription="@string/selectImagen"
        android:translationZ="20dp"
        app:layout_constraintBottom_toBottomOf="@id/imgProfile"
        app:layout_constraintEnd_toEndOf="@id/imgProfile"/>

    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:layout_marginStart="64dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/email"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="14dp"
        android:layout_marginTop="36dp"
        app:layout_constraintStart_toStartOf="@id/navigationTitle"
        app:layout_constraintTop_toBottomOf="@id/imgProfile"/>

    <TextView
        android:id="@+id/txtMyEmail"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="10dp"
        android:text="@string/myEmail"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="@id/navigationTitle"
        app:layout_constraintTop_toBottomOf="@id/txtEmail"/>

    <TextView
        android:id="@+id/txtPhone"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="21dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/phone"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="14dp"
        app:layout_constraintStart_toStartOf="@id/navigationTitle"
        app:layout_constraintTop_toBottomOf="@id/txtMyEmail"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tfPhone"
        android:layout_width="295dp"
        android:layout_height="48dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/corners_rounded"
        app:layout_constraintEnd_toEndOf="@id/navigationTitle"
        app:layout_constraintStart_toStartOf="@id/navigationTitle"
        app:layout_constraintTop_toBottomOf="@id/txtPhone">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint=""
            android:imeOptions="actionNext"
            android:inputType="text"
            android:textAlignment="center"
            android:textSize="16dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/txtFullName"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/fullName"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="14dp"
        app:layout_constraintStart_toStartOf="@id/navigationTitle"
        app:layout_constraintTop_toBottomOf="@id/tfPhone"/>

    <TextView
        android:id="@+id/txtMyName"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="10dp"
        android:text="@string/myName"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="@id/navigationTitle"
        app:layout_constraintTop_toBottomOf="@id/txtFullName"/>

    <TextView
        android:id="@+id/txtOffice"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/office"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="14dp"
        app:layout_constraintStart_toStartOf="@id/navigationTitle"
        app:layout_constraintTop_toBottomOf="@id/txtMyName"/>

    <TextView
        android:id="@+id/txtVassAddress"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="10dp"
        android:text="@string/VassAddress"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="@id/navigationTitle"
        app:layout_constraintTop_toBottomOf="@id/txtOffice"/>

    <TextView
        android:id="@+id/txtAboutMe"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/aboutMe"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="14dp"
        app:layout_constraintStart_toStartOf="@id/navigationTitle"
        app:layout_constraintTop_toBottomOf="@id/txtVassAddress"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="295dp"
        android:layout_height="48dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/corners_rounded"
        app:layout_constraintEnd_toEndOf="@id/navigationTitle"
        app:layout_constraintStart_toStartOf="@id/navigationTitle"
        app:layout_constraintTop_toBottomOf="@id/txtAboutMe">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint=""
            android:imeOptions="actionDone"
            android:inputType="text"
            android:textAlignment="center"
            android:textSize="16dp"/>

    </com.google.android.material.textfield.TextInputLayout>

<!--   <LinearLayout-->
<!--        android:id="@+id/linearInformation"-->
<!--        android:layout_width="295dp"-->
<!--        android:layout_height="351dp"-->
<!--        android:layout_marginStart="40dp"-->
<!--        android:layout_marginTop="36dp"-->
<!--        android:layout_marginEnd="40dp"-->
<!--        android:orientation="vertical"-->
<!--        app:layout_constraintEnd_toEndOf="@id/navigationTitle"-->
<!--        app:layout_constraintStart_toStartOf="@id/navigationTitle"-->
<!--        app:layout_constraintTop_toBottomOf="@id/imgProfile">-->

<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="16dp"-->
<!--            android:layout_marginStart="24dp"-->
<!--            android:fontFamily="@font/roboto_medium"-->
<!--            android:text="@string/email"-->
<!--            android:textAlignment="textStart"-->
<!--            android:textColor="@color/black"-->
<!--            android:textSize="14dp" />-->

<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="19dp"-->
<!--            android:layout_marginStart="24dp"-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:text="@string/myEmail"-->
<!--            android:textAlignment="textStart"-->
<!--            android:textColor="@color/black"-->
<!--            android:textSize="16dp" />-->

<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="16dp"-->
<!--            android:layout_marginStart="24dp"-->
<!--            android:layout_marginTop="21dp"-->
<!--            android:fontFamily="@font/roboto_medium"-->
<!--            android:text="@string/phone"-->
<!--            android:textAlignment="textStart"-->
<!--            android:textColor="@color/black"-->
<!--            android:textSize="14dp" />-->

<!--        <com.google.android.material.textfield.TextInputLayout-->
<!--            android:layout_width="295dp"-->
<!--            android:layout_height="48dp"-->
<!--            android:layout_marginTop="5dp"-->
<!--            android:background="@drawable/corners_rounded">-->

<!--            <EditText-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:hint=""-->
<!--                android:imeOptions="actionNext"-->
<!--                android:inputType="text"-->
<!--                android:textAlignment="center"-->
<!--                android:textSize="16dp"/>-->

<!--        </com.google.android.material.textfield.TextInputLayout>-->

<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="16dp"-->
<!--            android:layout_marginStart="24dp"-->
<!--            android:layout_marginTop="16dp"-->
<!--            android:fontFamily="@font/roboto_medium"-->
<!--            android:text="@string/fullName"-->
<!--            android:textAlignment="textStart"-->
<!--            android:textColor="@color/black"-->
<!--            android:textSize="14dp" />-->

<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="19dp"-->
<!--            android:layout_marginStart="24dp"-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:text="@string/myName"-->
<!--            android:textAlignment="textStart"-->
<!--            android:textColor="@color/black"-->
<!--            android:textSize="16dp" />-->

<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="16dp"-->
<!--            android:layout_marginStart="24dp"-->
<!--            android:layout_marginTop="20dp"-->
<!--            android:fontFamily="@font/roboto_medium"-->
<!--            android:text="@string/office"-->
<!--            android:textAlignment="textStart"-->
<!--            android:textColor="@color/black"-->
<!--            android:textSize="14dp" />-->

<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="19dp"-->
<!--            android:layout_marginStart="24dp"-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:text="@string/VassAddress"-->
<!--            android:textAlignment="textStart"-->
<!--            android:textColor="@color/black"-->
<!--            android:textSize="16dp" />-->

<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="16dp"-->
<!--            android:layout_marginStart="24dp"-->
<!--            android:layout_marginTop="20dp"-->
<!--            android:fontFamily="@font/roboto_medium"-->
<!--            android:text="@string/aboutMe"-->
<!--            android:textAlignment="textStart"-->
<!--            android:textColor="@color/black"-->
<!--            android:textSize="14dp" />-->

<!--        <com.google.android.material.textfield.TextInputLayout-->
<!--            android:layout_width="295dp"-->
<!--            android:layout_height="48dp"-->
<!--            android:layout_marginTop="5dp"-->
<!--            android:background="@drawable/corners_rounded">-->

<!--            <EditText-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent"-->
<!--                android:hint=""-->
<!--                android:imeOptions="actionDone"-->
<!--                android:inputType="text"-->
<!--                android:textAlignment="center"-->
<!--                android:textSize="16dp"/>-->

<!--        </com.google.android.material.textfield.TextInputLayout>-->

<!--    </LinearLayout>-->

    <Button
        android:layout_width="343dp"
        android:layout_height="56dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/hk_guise_bold"
        android:background="@drawable/corners_rounded"
        android:text="@string/btnUpdate"
        android:textSize="16dp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/navigationTitle"
        app:layout_constraintStart_toStartOf="@id/navigationTitle" />


</androidx.constraintlayout.widget.ConstraintLayout>